--- a/moto-service/pom.xml
+++ b/moto-service/pom.xml
@@ -50,23 +50,19 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-bootstrap -->
-		<!-- 
-			se usa esta dependencia para que funcione el config server y el archivo de propiedades
-			se tiene que cambiar a bootstrap.yaml y solo dejar la configuracion del nombre der servicio y la 
-			configuracion del config-server, ejemplo:
-			
-			spring:
-  			  application:
-    			name: usuario-service
-  			  cloud:
-    			config:
-      			  enabled: true
-      			  uri: http://localhost:8081 
-		 -->
+		<!-- se usa esta dependencia para que funcione el config server y el archivo 
+			de propiedades se tiene que cambiar a bootstrap.yaml y solo dejar la configuracion 
+			del nombre der servicio y la configuracion del config-server, ejemplo: spring: 
+			application: name: usuario-service cloud: config: enabled: true uri: http://localhost:8081 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-bootstrap</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
