--- a/usuario-service/pom.xml
+++ b/usuario-service/pom.xml
@@ -73,6 +73,10 @@
 		</dependency>
 
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
